--- a/css/main.css
+++ b/css/main.css
@@ -387,17 +387,33 @@ h1, .single .entry-title,
 
 h1, .single .entry-title,
 .h1 {
-  font-size: 5.625rem; }
+  font-size: 2.8125rem;
+  line-height: 1.1; }
+  @media screen and (min-width: 768px) {
+    h1, .single .entry-title,
+    .h1 {
+      font-size: 5.625rem; } }
 
 h2, .split-feature h3, .blog .entry-title,
 .archive .entry-title, .error404 .page-title,
 .h2 {
-  font-size: 3rem; }
+  font-size: 1.8rem;
+  line-height: 1.2; }
+  @media screen and (min-width: 768px) {
+    h2, .split-feature h3, .blog .entry-title,
+    .archive .entry-title, .error404 .page-title,
+    .h2 {
+      font-size: 3rem; } }
 
 h3, .wp-block-latest-posts.is-grid > li > a,
 .h3 {
   font-weight: 900;
-  font-size: 1.625rem; }
+  font-size: 1.1375rem;
+  line-height: 1.4; }
+  @media screen and (min-width: 768px) {
+    h3, .wp-block-latest-posts.is-grid > li > a,
+    .h3 {
+      font-size: 1.625rem; } }
 
 h4, .wordcamp-sponsors .wordcamp-sponsors__title,
 .h4, .widget-title {
@@ -1634,6 +1650,10 @@ input[type="submit"] {
   height: 56px;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0; }
+
+.error404 .page-title {
+  position: relative;
+  z-index: 5; }
 
 .error404 .site-main {
   padding-left: 20px;
