--- a/scss/layouts/_blog.scss
+++ b/scss/layouts/_blog.scss
@@ -42,6 +42,7 @@
 	    position: relative !important;
 	    width: auto !important;
 	    word-wrap: normal!important;
+	    position: relative;
 	    z-index: 5;
 	}
 
@@ -155,7 +156,8 @@
 }
 
 
-.single-post {
+.single-post,
+.page {
 	.entry-image {
 		position: static;
 		z-index: 2;
