--- a/css/main.css
+++ b/css/main.css
@@ -1524,7 +1524,7 @@ input[type="submit"] {
     background-image: url(https://2020.brisbane.wordcamp.org/files/2019/12/image-mask.png);
     background-position: bottom center;
     background-size: 100% auto;
-    bottom: 0;
+    bottom: -1px;
     width: 100%;
     height: 100%; }
   .blog .site-main > header h1,
