--- a/scss/layouts/_blog.scss
+++ b/scss/layouts/_blog.scss
@@ -70,7 +70,7 @@
 			background-image: url(https://2020.brisbane.wordcamp.org/files/2019/12/image-mask.png);
 		    background-position: bottom center;
 		    background-size: 100% auto;
-		    bottom: 0;
+		    bottom: -1px; // Offset to remove subpixel rounding
 		    width: 100%;
 		    height: 100%;
 		}
