--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -48,7 +48,7 @@
 		background-image: url('https://2020.brisbane.wordcamp.org/files/2019/12/image-mask.png');
 		background-size: 100% auto;
 		background-position: bottom center;
-		bottom: 0;
+		bottom: -1px; // To prevent subpixel rounding showing a gap
 	}
 }
 
